--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       <ul class="cards">
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-1.png" alt="card-img">
@@ -20,7 +20,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-6.png" alt="card-img">
@@ -28,7 +28,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-3.png" alt="card-img">
@@ -36,7 +36,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-2.png" alt="card-img">
@@ -44,7 +44,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-1.png" alt="card-img">
@@ -52,7 +52,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-5.png" alt="card-img">
@@ -60,7 +60,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-2.png" alt="card-img">
@@ -68,7 +68,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-6.png" alt="card-img">
@@ -76,7 +76,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-3.png" alt="card-img">
@@ -84,7 +84,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-4.png" alt="card-img">
@@ -92,7 +92,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-5.png" alt="card-img">
@@ -100,7 +100,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-4.png" alt="card-img">
@@ -108,7 +108,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-4.png" alt="card-img">
@@ -116,7 +116,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-4.png" alt="card-img">
@@ -124,7 +124,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-4.png" alt="card-img">
@@ -132,7 +132,7 @@
         </li>
         <li class="card">
           <div class="view front-view">
-            <img src="Z:\webd\memory card game\images\que_icon.svg" alt="icon">
+            <img src="Z:\webd\memory card game\images\download.png" alt="icon">
           </div>
           <div class="view back-view">
             <img src="Z:\webd\memory card game\images\img-4.png" alt="card-img">
